# camera-toolkit

./: .gitignore  CMakeLists.txt  README.md  config.h.in
cmake/: camera_toolkit-config.cmake.in  camera_toolkit.pc.in
include/: camera_toolkit.h
include/camera_toolkit/: capture.h  common.h  convert.h  encoder.h  network.h  rtp_packer.h  timestamp.h
src/: camera_toolkit.cpp  capture.cpp  convert.cpp  encoder.cpp  ffmpeg_common.h  log.h  network.cpp  rtp_packer.cpp  timestamp.cpp
tests/: CMakeLists.txt  test_rtp_packer.cpp  test_timestamp.cpp
